# uv_project

./: README.md  pyproject.toml
src/myproject/: main.py
