[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
myproject = "myproject:main"
p1 = "myproject.main:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
